test/interaction/Issue639-2.agda
{-# OPTIONS --safe #-}
module Issue639-2 where

postulate A : Set
